--- a/desktop/index.html
+++ b/desktop/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="scripts/hmac-sha256.js"></script>
+    <script src="scripts/HmacSHA1.js"></script>
+    <script src="scripts/md5.js"></script>
+    <script src="scripts/enc-base64-min.js"></script>
     <title>xiaoba robot</title>
   </head>
   <body>
